tests/compile_error/unit_struct.rs
use getset2::{Getter, Setter};

#[derive(Getter, Setter)]
pub struct UnitStruct;

fn main() {}
